# moveiter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-checkmate.yaml
src/: adapters.rs  asyn.rs  asynciters.rs  endless.rs  lib.rs  moveiter.rs  optutil.rs  residual.rs  syn.rs  terminal.rs
src/adapters/: aemi_as_finite.rs  aemi_as_terminal.rs  afmi_as_terminal.rs  emi_as_async.rs  emi_as_finite.rs  emi_as_iterator.rs  emi_as_terminal.rs  fmi_as_async.rs  fmi_as_iterator.rs  fmi_as_terminal.rs  tmi_as_async.rs
src/asyn/: endless.rs  finite.rs  terminal.rs
src/asyn/endless/: afmiadapter.rs  atmiadapter.rs
src/asyn/finite/: atmiadapter.rs
src/asynciters/: ati.rs
src/asynciters/ati/: blankets.rs  futati.rs
src/endless/: adapter.rs  intomoveiter.rs  intoterm.rs  iteration.rs  tests.rs
src/moveiter/: adapter.rs  stditer.rs  tests.rs
src/residual/: iteration.rs  tests.rs
src/syn/: endless.rs  finite.rs  terminal.rs
src/syn/terminal/: into_res_iter.rs  resiter.rs
src/terminal/: chain.rs  enumerate.rs  filter.rs  filtermap.rs  intersperse.rs  iteration.rs  map.rs  mapterm.rs  peekable.rs  skipwhile.rs  stditer.rs  stepby.rs  takewhile.rs  tests.rs  zip.rs
