[package]
name = "moveiter"
version = "0.1.0"
authors = ["Nate Wilcox <nathan+dev@electriccoin.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6.1"
async-trait = "0.1.56"

[dev-dependencies.tokio]
version = "1.19.2"
features = [
  "rt",
]
